# thiserror-core2

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: expand.rs  valid.rs
src/: aserror.rs  lib.rs
tests/: test_backtrace.rs  test_deprecated.rs  test_display.rs  test_error.rs  test_expr.rs  test_from.rs  test_generics.rs  test_lints.rs  test_option.rs  test_path.rs  test_source.rs  test_transparent.rs
tests/ui/: bad-field-attr.rs  bad-field-attr.stderr  concat-display.rs  duplicate-enum-source.rs  duplicate-fmt.rs  duplicate-struct-source.rs  duplicate-transparent.rs  from-backtrace-backtrace.rs  from-backtrace-backtrace.stderr  from-not-source.rs  lifetime.rs  lifetime.stderr  no-display.rs  no-display.stderr  source-enum-not-error.rs  source-enum-not-error.stderr  source-struct-not-error.rs  source-struct-not-error.stderr  transparent-display.rs  transparent-enum-many.rs  transparent-enum-source.rs  transparent-struct-many.rs  transparent-struct-source.rs  unexpected-field-fmt.rs  unexpected-struct-source.rs  union.rs
