[package]
name = "thiserror_core2"
version = "2.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
rust-version = "1.31"
license = "MIT OR Apache-2.0"
description = "derive(Error) (no_std-enabled using core2)"
repository = "https://github.com/bbqsrc/thiserror-core2"
documentation = "https://docs.rs/thiserror_core2"
categories = ["rust-patterns"]
readme = "README.md"

[dependencies]
thiserror_core2-impl = { version = "2.0.0", path = "impl" }
core2 = { version = "0.4", default-features = false }

[dev-dependencies]
anyhow = "1.0"
ref-cast = "1.0"
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[features]
default = ["std"]
std = ["core2/std"]

[workspace]
members = ["impl"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
